--- a/app/templates/catalog/index.hbs
+++ b/app/templates/catalog/index.hbs
@@ -36,7 +36,7 @@
 				        <li class="meat" {{action "setIndustryFilter" 'meat' on="mouseUp"}}>
 				          <span>{{t "industries.meat_processing"}}</span>
 				        </li>
-				        <li class="beer" {{action "setIndustryFilter" 'brewery' on="mouseUp"}}>
+				        <li class="brewery" {{action "setIndustryFilter" 'brewery' on="mouseUp"}}>
 				          <span>{{t "industries.brewery"}}</span>
 				        </li>
 				        <li class="milk" {{action "setIndustryFilter" 'milk' on="mouseUp"}}>
