--- a/app/templates/components/main-navigation.hbs
+++ b/app/templates/components/main-navigation.hbs
@@ -23,7 +23,7 @@
       <ul class="nav navbar-nav navbar-right">
           <li>{{#link-to "about"}}{{t "index.menu.about"}}{{/link-to}}</li>
           <li>{{#link-to "press-center"}}{{t "index.menu.press_center"}}{{/link-to}}</li>
-          <!--li>{{#link-to "segments"}}Сегменты бизнеса{{/link-to}}</li-->
+          <li>{{#link-to "media-center"}}{{t "index.menu.media"}}{{/link-to}}</li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{t "index.menu.catalog"}} 
             <span class="caret">
