--- a/app/templates/components/slider-index.hbs
+++ b/app/templates/components/slider-index.hbs
@@ -367,6 +367,7 @@
         style="z-index: 11; white-space: nowrap; line-height: 22px; font-weight: 400; color: rgba(255, 255, 255, 1);">solutions which allows to achieve high production performance.
       </div>
 
+        {{#link-to "industries" "pigs"}}
       <div class="tp-caption button button-red" 
          id="slide-45-layer-8" 
          data-x="['left','center','center','center']" data-hoffset="['0','0','0','0']" 
@@ -386,10 +387,9 @@
         data-splitout="none" 
         data-actions='[{"event":"click","action":"jumptoslide","slide":"rs-46","delay":""}]'
         data-responsive_offset="on" 
-        data-responsive="off"
-        
-        style="display: none;">Подробнее <i class="fa-icon-chevron-right"></i> 
+        data-responsive="off">Подробнее <i class="fa-icon-chevron-right"></i> 
       </div>
+        {{/link-to}}
 
     </li>
 
@@ -417,7 +417,7 @@
         data-responsive_offset="on" 
 
         
-        style="z-index: 5; white-space: nowrap;">protection 
+        style="z-index: 5; white-space: nowrap;">biosafety
       </div>
 
       <div class="tp-caption meratech-display tp-resizeme" 
@@ -440,7 +440,7 @@
         data-responsive_offset="on" 
 
         
-        style="z-index: 7; white-space: nowrap;">Agriculture
+        style="z-index: 7; white-space: nowrap;">Ecological
       </div>
 
 
@@ -464,7 +464,7 @@
         data-responsive="off"
         data-elementdelay="0.02" 
         
-        style="z-index: 11; white-space: nowrap; line-height: 22px; font-weight: 400; color: rgba(255, 255, 255, 1);">We believe that everything starts from hygiene, therefore we invent complex
+        style="z-index: 11; white-space: nowrap; line-height: 22px; font-weight: 400; color: rgba(255, 255, 255, 1);">Safe and healthy product begins it's path step by step in clean 
       </div>
 
       <div class="tp-caption meratech-smalltext" 
@@ -487,9 +487,10 @@
         data-responsive="off"
         data-elementdelay="0.02" 
         
-        style="z-index: 11; white-space: nowrap; line-height: 22px; font-weight: 400; color: rgba(255, 255, 255, 1);">solutions which allows to achieve high production performance.
+        style="z-index: 11; white-space: nowrap; line-height: 22px; font-weight: 400; color: rgba(255, 255, 255, 1);">and hazardless environment. We're sure each step is important.
       </div>
 
+        {{#link-to "industries" "poultry"}}
       <div class="tp-caption button button-red" 
          id="slide-45-layer-8" 
          data-x="['left','center','center','center']" data-hoffset="['0','0','0','0']" 
@@ -499,7 +500,6 @@
         data-whitespace="nowrap"
         data-transform_idle="o:1;"
           data-transform_hover="o:1;rX:0;rY:0;rZ:0;z:0;s:300;e:Power1.easeInOut;"
-          data-style_hover="c:rgba(255, 255, 255, 1.00);bg:rgba(114, 168, 0, 0);bc:rgba(139, 192, 39, 1.00);cursor:pointer;"
    
          data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:2000;e:Power4.easeInOut;" 
          data-transform_out="y:[175%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;" 
@@ -509,10 +509,9 @@
         data-splitout="none" 
         data-actions='[{"event":"click","action":"jumptoslide","slide":"rs-46","delay":""}]'
         data-responsive_offset="on" 
-        data-responsive="off"
-        
-        style="display: none;">Подробнее <i class="fa-icon-chevron-right"></i> 
+        data-responsive="off">Подробнее <i class="fa-icon-chevron-right"></i> 
       </div>
+        {{/link-to}}
 
     </li>
 
@@ -610,6 +609,7 @@
         style="z-index: 11; white-space: nowrap; line-height: 22px; font-weight: 400; color: rgba(255, 255, 255, 1);">for every processing circle.
       </div>
 
+      {{#link-to 'equipment'}}
       <div class="tp-caption button button-red" 
          id="slide-46-layer-8" 
          data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']" 
@@ -619,7 +619,6 @@
         data-whitespace="nowrap"
         data-transform_idle="o:1;"
           data-transform_hover="o:1;rX:0;rY:0;rZ:0;z:0;s:300;e:Power1.easeInOut;"
-          data-style_hover="c:rgba(255, 255, 255, 1.00);bg:rgba(114, 168, 0, 0);bc:rgba(139, 192, 39, 1.00);cursor:pointer;"
    
          data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:2000;e:Power4.easeInOut;" 
          data-transform_out="y:[175%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;" 
@@ -633,6 +632,7 @@
         
         style="">Подробнее <i class="fa-icon-chevron-right"></i> 
       </div>
+      {{/link-to}}
     </li>
 
     <li data-index="rs-3" data-transition="zoomout" data-slotamount="7"  data-easein="Power4.easeInOut" data-easeout="Power4.easeInOut" data-masterspeed="2000"  data-thumb="../../assets/images/slider/slider_4_.jpg"  data-rotate="0" data-fstransition="zoomout" data-saveperformance="off"  data-title="Love it?" data-description="">
@@ -754,7 +754,7 @@
         data-responsive_offset="on" 
         data-responsive="off"
         
-        style="">Подробнее <i class="fa-icon-chevron-right"></i> 
+        style="display: none;">Подробнее <i class="fa-icon-chevron-right"></i> 
       </div>
       
     </li>
@@ -879,7 +879,7 @@
         data-responsive_offset="on" 
         data-responsive="off"
         
-        style="">Подробнее <i class="fa-icon-chevron-right"></i> 
+        style="display: none;">Подробнее <i class="fa-icon-chevron-right"></i> 
       </div>
       
     </li>
@@ -981,6 +981,7 @@
         style="z-index: 11; white-space: nowrap; line-height: 22px; font-weight: 400; color: rgba(255, 255, 255, 1);">to improve tons of raw milk quality daily. 
       </div>
 
+        {{#link-to "industries" "cows"}}
       <div class="tp-caption button button-red" 
          id="slide-48-layer-8" 
          data-x="['left','center','center','center']" data-hoffset="['5','0','0','0']" 
@@ -1004,6 +1005,7 @@
         
         style="">Подробнее <i class="fa-icon-chevron-right"></i> 
       </div>
+        {{/link-to}}
       
     </li>
 
@@ -1130,7 +1132,7 @@
         data-responsive_offset="on" 
         data-responsive="off"
         
-        style="">Подробнее <i class="fa-icon-chevron-right"></i> 
+        style="display: none;">Подробнее <i class="fa-icon-chevron-right"></i> 
       </div>
       
     </li>
