--- a/app/templates/industries/index.hbs
+++ b/app/templates/industries/index.hbs
@@ -12,36 +12,6 @@
   <div class="container-fluid container-border">
 	    <div class="tabs-menu-wrapper">
 	    	<ul class="tabs-menu">
-	    		<!--li>
-					  <button type="button" class="" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-					    Тип продукта
-					  </button>
-					  <div class="dropdown-menu catalog-filter-container">
-						  <ul class="filter-list container">
-				        <li class="cows">
-				          <span>Внешняя мойка</span>
-				        </li>
-				        <li class="chicken">
-				          <span>Внутренняя мойка</span>
-				        </li>
-				        <li class="pigs">
-				          <span>Дезинфекция</span>
-				        </li>
-				        <li class="meat">
-				          <span>Смазки</span>
-				        </li>
-				        <li class="beer">
-				          <span>Животноводство</span>
-				        </li>
-				        <li class="milk">
-				          <span>Усиливающие добавки</span>
-				        </li>
-				        <li class="laundry">
-				          <span>Другие средства</span>
-				        </li>
-			        </ul>
-					  </div>
-	    		</li-->
 	    		<li>
 					  <button type="button" class="" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 					    Сфера применения
@@ -60,7 +30,7 @@
 				        <li class="meat">
 				          <span>Meat processing</span>
 				        </li>
-				        <li class="beer">
+				        <li class="brewery">
 				          <span>Brewery &amp; Soft drinks</span>
 				        </li>
 				        <li class="milk">
