--- a/app/templates/components/news-item.hbs
+++ b/app/templates/components/news-item.hbs
@@ -4,6 +4,6 @@
                     <div class="img" style="background-image: url({{image}})"></div>
                   </div>
                   <div class="date">{{format-date date}}</div>
-                  <div class="title">{{title}}</div>
-                  <div class="body">{{preview}}</div>
+                  <div class="title">{{{title}}}</div>
+                  <div class="body">{{{preview}}}</div>
                 </div>
